-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
DoM pattern can be set as default directory layout as plain layout:
# lfs setstripe -L mdt -S 128K -c 2 <directory>
it misses DoM component sanity checks because it is set as not component but plain layout pattern. Such layout is not allowed and causes later crashed when file is created under that directory.
Currently this is prevented in master by checks in LFS itself but older LFS versions could does that still, so LOD itself must prohibit that as well